--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-async-hook": "^3.6.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^16.9.8"
+    "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.1"
   }
 }
