--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-async-hook": "^3.6.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
